[Extensions] Include the contextUrl in developerPrivate.RuntimeErrors

Correctly populate the developerPrivate.RuntimeError contextUrl field.
Update a unittest for the same.

Bug: 783961
Change-Id: I6bffea470232e460d8a9175bfe8e760a35bb2c7e
Reviewed-on: https://chromium-review.googlesource.com/818395
Reviewed-by: Karan Bhatia <karandeepb@chromium.org>
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522992}
Former-commit-id: c881c82c0bb76e6a0708a0dce4333406c7eb9eb7